--- a/marsrover-server/build.gradle
+++ b/marsrover-server/build.gradle
@@ -6,8 +6,9 @@ plugins {
 
 apply plugin: 'java'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "io.freefair.lombok"
 
-version '1.0-SNAPSHOT'
+version '0.0.1-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -17,6 +18,15 @@ repositories {
 }
 
 dependencies {
-    cimplementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.apache.commons:commons-lang3:3.1'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.apache.directory.studio:org.apache.commons.codec:1.8'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-logging'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+    implementation('org.glassfish.jersey.core:jersey-client:2.27')
+    implementation('org.glassfish.jersey.media:jersey-media-json-jackson:2.27')
+    implementation('org.glassfish.jersey.core:jersey-common:2.27')
+    implementation('org.glassfish.jersey.inject:jersey-hk2:2.27')
 }
