--- a/marsrover-server/src/main/resources/application.yml
+++ b/marsrover-server/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+spring:
+  datasource:
+    url: jdbc:h2:mem:marsroverdb
+    username: sss
+    password: password
+    driverClassName: org.h2.Driver
+  jpa:
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+
+# custom props
 mars.cache.dir:       '/tmp/'
 mars.photo.seedFile:  '/dates.txt'
 nasa.client.apikey:     'DEMO_KEY'
